fixed filmslist on mobiles and aviable tickets in filmsInfo.js

--- a/src/components/Styles/FIlmInfo.css
+++ b/src/components/Styles/FIlmInfo.css
@@ -1,3 +1,6 @@
+
+
+
 .film-poster{
     object-fit: cover;
     border-radius: 5px;
@@ -15,9 +18,6 @@
 }
 .session{
     cursor: pointer;
-    display: flex;
-    flex-direction: column !important;
-    justify-content: space-between !important;
     padding: 10px;
     border-radius: 10px;
     background-color: #f5f5f5;
@@ -25,6 +25,8 @@
     margin-bottom: 20px !important;
     margin-left: 10px !important;
     transition: all 0.3s ease-in-out;
+    width: 270px;
+
 }
 .session:hover{
     box-shadow: 0 10px 10px rgba(255, 255, 255, 0.8);
