--- a/src/components/Styles/Films.css
+++ b/src/components/Styles/Films.css
@@ -58,6 +58,8 @@
     }
 
     .movie img {
+        padding-left: 2px;
+        padding-right: 2px;
         height: 200px!important;
     }
 }
